rust/macros/tests/ui/fail/actor_owned_missing_label.rs
use telltale_macros::actor_owned;

#[actor_owned]
struct ShellWorker;

fn main() {}
